Fix hide section button design on mobile

--- a/ui/component/scheduledStreams/style.scss
+++ b/ui/component/scheduledStreams/style.scss
@@ -1,3 +1,5 @@
+@import '~ui/scss/init/breakpoints';
+
 .upcoming-livestreams {
   .section__header--actions {
     margin-bottom: 0;
@@ -21,13 +23,17 @@
   }
 
   .hide-livestreams {
-    background-color: var(--color-primary);
-    border-radius: var(--border-radius);
-    color: white;
-    font-size: var(--font-base);
-    padding: 0 var(--spacing-xxxs);
-    margin-top: 2px;
-    align-self: flex-start;
+    &.button--link {
+      background-color: var(--color-primary);
+      border-radius: var(--border-radius);
+      color: white;
+      font-size: var(--font-base);
+      padding: 0 var(--spacing-xxxs) !important;
+      margin-top: 2px;
+      align-self: flex-start;
+      height: unset;
+    }
+
     &:hover {
       background-color: var(--color-text-inverse);
       color: var(--color-primary);
